<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_categoria"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/categoria" />
        <item
            android:id="@+id/nav_productos_por_categorias"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/productos_por_categor_a" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/colaboradores" />
    </group>

    <item android:title="@string/acceso">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/cerrar_sesi_n" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/salir" />
        </menu>
    </item>

</menu>
