<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/super_padding"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_wolf"
        android:layout_marginBottom="@dimen/espacio_control"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensaje"
        style="@style/supertexto"
        android:layout_marginBottom="@dimen/espacio_control"
         />
    <Button
        android:id="@+id/btnCrearCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"
        android:layout_marginBottom="@dimen/espacio_control"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvIniciarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inicia_sesion"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/tvTienesCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tienes_cuenta"
            style="@style/textboton" />
    </LinearLayout>
    <TextView
        android:id="@+id/tvIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_thin"
        android:textSize="36sp"/>

</LinearLayout>